# DNA-Tree-based-Clustering

./: .gitignore  README.md  README.md.bak  SSClust.py  accuracy.py  channel.py  data_analysis.py  distance.py  gen_random_data.py  kmeans_pytorch.py  memory_bench.py  model.py  runtime_bench.py  sample_data_from_file.py  sample_index_from_file.py  simulate_sed.py  test.py  time_memory_anlysis.py
clover/: load_config.py  main.py  tree.py
clust/: chainer_lcs.py  load_config.py  load_config.py.bak  main.py  main.py.bak  multi_stage.py  pytree.py  seq_kmeans.py  tree.cp310-win_amd64.pyd  tree.py  tree.py.bak
clust/tree_src/: .gitignore  CMakeLists-example  CMakeLists.txt  module.cpp  test.py  test_main.cpp  trie.cpp  trie.h
iclust/: core.py  main.py  testmain.py
misc/: gen_random_data.py  memory_bench.py  test_convergency.py
msclust/: core.py  main.py
results/: ERR1816980_acc.csv  ERR1816980_acc_2.csv  P10_acc.csv  acc_dist_1.csv  acc_dist_2.csv  acc_dist_3.csv  draw_acc_plot.py  draw_data_characterization.py  draw_dist_opti_plot.py  draw_error_rate_distribution.py  draw_lower_bound.py  draw_mem_plot.py  draw_number_of_amplified_sequences.py  draw_number_of_clusters.py  draw_random_data_acc_plot.py  draw_runtime.py  id20_acc.csv  mem_usage_dls_16.csv  mem_usage_dls_18.csv  mem_usage_dls_20.csv  mem_usage_dlsm_16.csv  mem_usage_dlsm_18.csv  mem_usage_dlsm_20.csv  number_of_amplified_sequences.csv  number_of_clusters_1.csv  number_of_clusters_10k.csv  number_of_errors.csv  random_data_acc.csv  runtime.csv
soft_edit_distance/: README.md  seq_kmeans.py  (+1 more)
tmp/: cache  (+5 more)
(+16 files in other folders)
